--- a/243. Shortest Word Distance.md
+++ b/243. Shortest Word Distance.md
@@ -42,3 +42,5 @@ class Solution:
         return ans
         
 ```
+
+the above two are both O(n) rc and O(1) sc. The other solutions are just omitted.
