--- a/244. Shortest Word Distance II.md
+++ b/244. Shortest Word Distance II.md
@@ -3,6 +3,7 @@
 https://leetcode.com/problems/shortest-word-distance-ii/description/
 </details>
 
+```python
 class WordDistance(object):
     
     def __init__(self, words):
@@ -28,5 +29,7 @@ class WordDistance(object):
 # Your WordDistance object will be instantiated and called as such:
 # obj = WordDistance(words)
 # param_1 = obj.shortest(word1,word2)
+```
 
-//ezpz
+
+ezpz hsmp
