--- a/245. Shortest Word Distance III.md
+++ b/245. Shortest Word Distance III.md
@@ -1,3 +1,4 @@
+```java
 public class Solution {
     public int shortestWordDistance(String[] words, String word1, String word2) {
         int index = -1;
@@ -13,8 +14,11 @@ public class Solution {
         return min;
     }
 }
-    
-    
+```    
+
+other solutions
+
+```java
 public int shortestWordDistance(String[] words, String word1, String word2) {
     long dist = Integer.MAX_VALUE, i1 = dist, i2 = -dist;
     for (int i=0; i<words.length; i++) {
@@ -49,3 +53,4 @@ public int shortestWordDistance(String[] words, String word1, String word2) {
     }
     return (int) dist;
 }
+```
