--- a/293. Flip Game.md
+++ b/293. Flip Game.md
@@ -1,1 +1,10 @@
 https://leetcode.com/problems/flip-game/description/
+
+
+class Solution:
+    def generatePossibleNextMoves(self, s):
+        """
+        :type s: str
+        :rtype: List[str]
+        """
+        return [s[:i] + "--" + s[i + 2:] for i in range(len(s) - 1) if s[i:i + 2] == '++']
