--- a/293. Flip Game.md
+++ b/293. Flip Game.md
@@ -1,6 +1,6 @@
 https://leetcode.com/problems/flip-game/description/
 
-
+```python
 class Solution:
     def generatePossibleNextMoves(self, s):
         """
@@ -8,3 +8,4 @@ class Solution:
         :rtype: List[str]
         """
         return [s[:i] + "--" + s[i + 2:] for i in range(len(s) - 1) if s[i:i + 2] == '++']
+```
