--- a/281. Zigzag Iterator.md
+++ b/281. Zigzag Iterator.md
@@ -1,1 +1,9 @@
+https://leetcode.com/problems/zigzag-iterator/description/
 
+Since this problem can be extend to K- vectors, so a more generalized solution is better.
+
+solution 1: everytime next() is called, if 'list2' hasnext(), switch list1 and list2. otherwise keep iterate list1.
+
+solution 2: Uses a queue to store the iterators in different vectors. Every time we call next(), we pop an element from the list, and re-add it to the end to cycle through the lists.
+
+the solution is from : [leetcode discussion](https://discuss.leetcode.com/topic/26654/simple-java-solution-for-k-vector)
