--- a/252. Meeting Rooms.md
+++ b/252. Meeting Rooms.md
@@ -25,7 +25,12 @@ And in terms of comparator, there is another smart way to accomplish this.
 
 https://discuss.leetcode.com/topic/20959/ac-clean-java-solution/2
 
-This implementation can save some time (if the answer is false ,since it avoid extra sort and the O(n)) theoretically
+This implementation can save some time (if the answer is false ,since it avoid extra sort and the O(n)rc ) theoretically
 
-But is reality, it depends
+*/
+
+/* Python
+def canAttendMeetings(self, intervals):
+    intervals.sort(key=lambda i: i.start)
+    return all(i.end <= j.start for i, j in zip(intervals, intervals[1:]))
 */
