--- a/252. Meeting Rooms.md
+++ b/252. Meeting Rooms.md
@@ -6,6 +6,7 @@ For example, Given [[0, 30],[5, 10],[15, 20]], return false.
 
 //comparator 
 
+```java
 public boolean canAttendMeetings(int[][] intervals) {
     Arrays.sort(intervals, (a, b) -> a[0] - b[0]);
  
@@ -17,20 +18,16 @@ public boolean canAttendMeetings(int[][] intervals) {
  
     return true;
 }
-
-//above is the my understaning, but actually the input is not a 2D array,but Interval
-//public boolean canAttendMeetings(Interval[] intervals) 
+```
+above is the my understaning, but actually the input is not a 2D array,but Interval
+public boolean canAttendMeetings(Interval[] intervals) 
 /*
-And in terms of comparator, there is another smart way to accomplish this.
-
-https://discuss.leetcode.com/topic/20959/ac-clean-java-solution/2
+And in terms of comparator, there is [another](https://discuss.leetcode.com/topic/20959/ac-clean-java-solution/2) smart way to accomplish this.
 
 This implementation can save some time (if the answer is false ,since it avoid extra sort and the O(n)rc ) theoretically
 
-*/
-
-/* Python
+```python
 def canAttendMeetings(self, intervals):
     intervals.sort(key=lambda i: i.start)
     return all(i.end <= j.start for i, j in zip(intervals, intervals[1:]))
-*/
+```
