--- a/253. Meeting Romms II.md
+++ b/253. Meeting Romms II.md
@@ -1,11 +1,11 @@
-/*
 
-Given an array of meeting time intervals consisting of start and end times [[s1,e1],[s2,e2],...]
-find the minimum number of conference rooms required.
-*/
+
+Given an array of meeting time intervals consisting of start and end times [[s1,e1],[s2,e2],...] find the minimum number of conference rooms required.
+
 
 //intuitive solution 
 
+```java
 public class Solution {
     public int minMeetingRooms(Interval[] intervals) {
         int[] starts = new int[intervals.length];
@@ -66,9 +66,10 @@ public int minMeetingRooms(Interval[] intervals) {
     
     return heap.size();
 }
+```
 
-//python version ,pay attention to the heappush and heapreplace
-/*
+
+```python
 def minMeetingRooms(self, intervals):
     intervals.sort(key=lambda x:x.start)
     heap = []  # stores the end time of intervals
@@ -80,5 +81,57 @@ def minMeetingRooms(self, intervals):
             # a new room is allocated
             heapq.heappush(heap, i.end)
     return len(heap)
-*/
+```
 
+yet another solution(algorithm)
+
+```python
+
+def minMeetingRooms(self, intervals):
+    ends = sorted(i.end for i in intervals)
+    rooms = ended = 0
+    for start in sorted(i.start for i in intervals):
+        if start < ends[ended]:
+            rooms += 1
+        else:
+            ended += 1
+    return rooms
+
+def minMeetingRooms(self, intervals):
+    ends = sorted(i.end for i in intervals)[::-1]
+    rooms = 0
+    for start in sorted(i.start for i in intervals):
+        if start < ends[-1]:
+            rooms += 1
+        else:
+            ends.pop()
+    return rooms
+    
+```
+
+```python
+def minMeetingRooms(self, intervals):
+    starts = []
+    ends = []
+    for i in intervals:
+        starts.append(i.start)
+        ends.append(i.end)
+
+    starts.sort()
+    ends.sort()
+    s = e = 0
+    numRooms = available = 0
+    while s < len(starts):
+        if starts[s] < ends[e]:
+            if available == 0:
+                numRooms += 1
+            else:
+                available -= 1
+
+            s += 1
+        else:
+            available += 1
+            e += 1
+        
+    return numRooms
+```
