--- a/170. Two Sum III - Data structure design.md
+++ b/170. Two Sum III - Data structure design.md
@@ -1,3 +1,7 @@
 The problem has one hidden question to ask,
 
 trade-off between add & find, which operation is more frequently called or evenly? and take sc into consideration as well.
+
+Are we looking for O(n)add O(1)find or O(1)add O(n) find?
+
+solution is omitted.
